force-app/main/default/objects/Service_Routing_Setting__mdt/Service_Routing_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Service Routing Setting</label>
    <pluralLabel>Service Routing Settings</pluralLabel>
</CustomObject>