force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Decline_Cooldown_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Decline_Cooldown_Minutes__c</fullName>
    <label>Decline Cooldown Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>10</defaultValue>
</CustomField>