force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Default_Strategy_Class__c.field-meta.xml
<CustomField>
    <fullName>Default_Strategy_Class__c</fullName>
    <label>Default Strategy Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>