force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Enable_Auto_Accept__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Accept__c</fullName>
    <label>Enable Auto Accept</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>