force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Enable_Routing__c.field-meta.xml
<CustomField>
    <fullName>Enable_Routing__c</fullName>
    <description>Master switch. Uncheck to stop all automatic assignment without deactivating code.</description>
    <label>Enable Routing</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>