force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Escalate_At_Percent_Of_SLA__c.field-meta.xml
<CustomField>
    <fullName>Escalate_At_Percent_Of_SLA__c</fullName>
    <label>Escalate At Percent Of SLA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>80</defaultValue>
</CustomField>