force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Standard logs assignment lifecycle. Verbose also logs every candidate evaluation.</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Verbose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>