force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Max_Decline_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Decline_Count__c</fullName>
    <description>After this many declines the item stops auto-routing and waits for a supervisor.</description>
    <label>Max Decline Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>3</defaultValue>
</CustomField>