force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Push_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Push_Timeout_Seconds__c</fullName>
    <label>Push Timeout Seconds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>30</defaultValue>
</CustomField>