force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Requeue_On_Offline__c.field-meta.xml
<CustomField>
    <fullName>Requeue_On_Offline__c</fullName>
    <description>When an agent goes offline, push their un-accepted work back to the queue.</description>
    <label>Requeue On Offline</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>