force-app/main/default/objects/Service_Routing_Setting__mdt/fields/Routing_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Routing_Batch_Size__c</fullName>
    <label>Routing Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>200</defaultValue>
</CustomField>